🐛 fix overflow of habitlist container

--- a/src/app/pages/HabitList/HabitList.module.css
+++ b/src/app/pages/HabitList/HabitList.module.css
@@ -2,6 +2,7 @@
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  overflow: hidden;
 }
 
 .main {
